# rustgres

./: .gitignore  Cargo.toml  DEADLOCK_FIX.md  E2E_TEST_FRAMEWORKS.md  EDGE_TEST_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PERSISTENCE_STATUS.md  PHASE2.8.md  PHASE2.9.md  PROJECT_STATUS.md  README.md  REFACTORING_SUMMARY.md  RELEASE_v0.1.0.md  SERVER.md  TEST_COVERAGE.md  UNIT_TEST_SUMMARY.md  VIEW_REFACTOR_PLAN.md  build.rs  plan.md  start-server.sh  test_all_sql.sh  test_create.sh  test_describe.sh
.github/workflows/: ci.yml
benches/: storage_bench.rs
docker/: Dockerfile  Dockerfile.alpine  build.sh
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  INSTALLATION.md  OPTIMIZER.md  QUICKSTART.md  ROADMAP.md  SQL.md  STANDARDS.md  STORAGE.md  TRANSACTIONS.md
docs/developers/: ROADMAP.md
docs/project-status/: PLANNED_FEATURES.md
docs/users/: QUICKSTART.md  SQL.md
e2e/: Cargo.toml  IMPLEMENTATION.md  QUICKREF.md  README.md  STRATEGY.md  docker-compose.yml  docker_test.sh  lib.rs  prometheus.yml  run_all.sh  rustgres-config.yaml  validate.sh
e2e/comparison/: benchmark.rs
e2e/load/: ramp_up.rs
e2e/scenarios/: crash_recovery.rs  oltp_workload.rs  pet_store.rs  smoke_tests.rs
e2e/soak/: memory_leak.rs
examples/: view_demo.rs
src/: config.rs  lib.rs  lock_monitor.rs  main.rs  metrics.rs  query_stats.rs  view_tests.rs
src/catalog/: aggregation.rs  catalog.rs  catalog_tests.rs  check.rs  crud_helper.rs  datatype_tests.rs  datetime_functions.rs  function.rs  insert_validator.rs  mod.rs  persistence.rs  predicate.rs  schema.rs  select_executor.rs  string_functions.rs  tests.rs  tuple.rs  unique.rs  update_delete_executor.rs  value.rs
src/executor/: advanced_sql_edge_tests.rs  aggregate.rs  aggregate_edge_tests.rs  array_subquery.rs  case.rs  case_edge_tests.rs  correlated.rs  cte.rs  cte_edge_tests.rs  cursor.rs  derived_table.rs  distinct.rs  distinct_edge_tests.rs  edge_tests.rs  eval.rs  except.rs  except_edge_tests.rs  executor.rs  filter.rs  function_cache.rs  group_by.rs  group_by_edge_tests.rs  hash_agg.rs  hash_join.rs  having.rs  having_edge_tests.rs  index_only_scan.rs  intersect.rs  intersect_edge_tests.rs  join.rs  join_edge_tests.rs  limit.rs  (+23 more)
tests/: e2e_sql.rs  e2e_tests.rs  executor_test.rs  integration_executor.rs  integration_test.rs  parser_test.rs  persistence_tests.rs  protocol_test.rs  storage_test.rs  test_harness.rs  transaction_test.rs  wal_test.rs
tests/e2e/: Cargo.toml  LOG_CAPTURE_STRATEGY.md  README.md  docker-compose.yml  lib.rs  vaultgres-config.yaml
tests/e2e/scenarios/: perf_test.rs  pet_store.rs
(+199 files in other folders)
