[package]
name = "rustgres"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
parking_lot = "0.12"
dashmap = "5.5"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ctrlc = "3.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[[bench]]
name = "storage_bench"
harness = false
