[package]
name = "rustgres"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
parking_lot = "0.12"
dashmap = "5.5"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
ctrlc = "3.4"
bincode = "1.3"
crossbeam = "0.8"
num_cpus = "1.16"
regex = "1.10"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[[test]]
name = "persistence_tests"
path = "e2e/persistence_tests.rs"

[[bench]]
name = "storage_bench"
harness = false
