[package]
name = "vaultgres"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1.0"
parking_lot = "0.12"
dashmap = "5.5"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
ctrlc = "3.4"
bincode = "1.3"
crossbeam = "0.8"
num_cpus = "1.16"
regex = "1.10"
chrono = "0.4.38"
signal-hook = "0.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[[bench]]
name = "storage_bench"
harness = false

[lints.clippy]
undocumented_unsafe_blocks     = "warn"
multiple_unsafe_ops_per_block  = "warn"
collapsible_if = "allow"